preventing collections list from appending to resize container on mobile

--- a/assets/less/partials/canopy-collections-resize.less
+++ b/assets/less/partials/canopy-collections-resize.less
@@ -9,10 +9,14 @@
     padding: 15px 0px 15px 60px;
 
     &.visible {
-      top: 57px;
+      top: 51px;
       left: -15px;
       width: 100%;
       right: 0;
+    }
+
+    li {
+      padding-top: 0;
     }
   }
 
